Fix issue with AP amount in buildings

--- a/templates/ajax/game/town/construction.html.twig
+++ b/templates/ajax/game/town/construction.html.twig
@@ -258,6 +258,7 @@
                 }
                 document.getElementById("prompt_id").value = this.getAttribute('x-building-id');
                 document.getElementById("ap_amount").value = "1";
+                document.getElementById("ap_amount").setAttribute('max', {{ app.user.activeCitizen.ap }});
                 prompt.style.display = "block";
                 prompt.style.top = (this.getBoundingClientRect().top + document.documentElement.scrollTop) + "px";
                 prompt.style.left = this.getBoundingClientRect().left - prompt.clientWidth + this.clientWidth + "px";
