--- a/templates/ajax/game/beyond/desert.html.twig
+++ b/templates/ajax/game/beyond/desert.html.twig
@@ -135,7 +135,7 @@
                                 {% if scout %}<button id="scout_ruin_discover">{{ 'Aufklärer: Ruinen erkunden'|trans({},'game') }}<img alt="" src="{{ asset('build/images/icons/small_stealthy.gif') }}" /><div class="tooltip help">{{ 'Mit dieser Aktion kannst du ermitteln, welches Gebäude hier vergraben ist.'|trans({},'game') }}</div></button>{% endif %}
                             {% else %}
                                 <img alt="" src="{{ asset('build/images/icons/small_help.gif') }}" /> <span class="ruin-name">{{ 'Ruine'|trans({},'game') }} : <b>{{ zone.prototype.label|trans({}, 'game') }}</b></span><br />
-                                <span class="ruin-desc">{{ zone.prototype.description|trans({}, 'game') }}</span>
+                                <span class="ruin-desc">{{ zone.prototype.description|trans({}, 'game')|raw }}</span>
                             {% endif %}
 
                         </div>
