--- a/templates/ajax/game/town/bank.html.twig
+++ b/templates/ajax/game/town/bank.html.twig
@@ -27,8 +27,10 @@
             {% endembed %}
 
             <div>
-                <button id="drop-all-button" {% if rucksack.items|length == 0 %}disabled{% endif %}><img alt="" src="{{ asset('build/images/item/item_bag.gif') }}"> {{ 'Rucksack in der Bank ausleeren'|trans({},'game') }}</button>
-                <div class="tooltip help">{{ 'Beachte: Behälter wie Rucksack, Einkaufswagen etc. werden nicht in der Bank abgelegt.'|trans({},'game') }}</div>
+                <button id="drop-all-button" {% if rucksack.items|length == 0 %}disabled{% endif %}>
+                    <img alt="" src="{{ asset('build/images/item/item_bag.gif') }}"> {{ 'Rucksack in der Bank ausleeren'|trans({},'game') }}
+                    <div class="tooltip help">{{ 'Beachte: Behälter wie Rucksack, Einkaufswagen etc. werden nicht in der Bank abgelegt.'|trans({},'game') }}</div>
+                </button>
             </div>
 
             {% if conf.isNightMode %}
