--- a/templates/ajax/game/town/door.html.twig
+++ b/templates/ajax/game/town/door.html.twig
@@ -118,7 +118,7 @@
             {% endif %}
             {% if show_ventilation %}
                 <button id="door_exit_hero" {% if not allow_ventilation or not can_go_out %}disabled{% endif %}>
-                    <img alt="" src="{{ asset('build/images/icons/star.gif') }}">{% trans from 'game' %}Durch die Lüftungsschächte klettern{% endtrans %}
+                    <img alt="" src="{{ asset('build/images/icons/star.gif') }}">{% trans from 'game' %}Durch die Lüftungsschächte klettern (out){% endtrans %}
                     <div class="tooltip help">{{ 'Diese Aktion wird durch ein Gebäude in der Stadt ermöglicht (nur Helden können sie verwenden).'|trans({},'game') }}</div>
                 </button>
             {% endif %}
