--- a/templates/ajax/game/town/nightwatch.html.twig
+++ b/templates/ajax/game/town/nightwatch.html.twig
@@ -32,20 +32,20 @@
     </div>
     {% endif %}
 
-
-    <h5>{{ 'Nachtwächter'|trans({},'game') }}</h5>
-    <div class="nightwatch row-table citizens-list">
-        <div class="row header">
-            <div class="cell padded rw-3"></div>
-            <div class="cell padded rw-2"></div>
-            <div class="cell padded rw-6">{{ 'Benutzte Waffe'|trans({}, 'game') }}</div>
-        </div>
-        {% for watcher in watchers %}
-            <div class="row small {% if watcher.citizen == me %} me{% endif %}">
-                <div class="cell padded rw-3 center">{{watcher.citizen.name}}</div>
-                <div class="cell padded rw-2 center">{{watcher.def}} <img src="{{ asset('build/images/icons/small_zombie.gif') }}" /></div>
-                <div class="cell padded rw-6">
-                    {% if watcher.citizen == me %}
+    {% if watchers is not empty %}
+<h5>{{ 'Nachtwächter'|trans({},'game') }}</h5>
+<div class="nightwatch row-table citizens-list">
+    <div class="row header">
+        <div class="cell padded rw-3"></div>
+        <div class="cell padded rw-2"></div>
+        <div class="cell padded rw-6">{{ 'Benutzte Waffe'|trans({}, 'game') }}</div>
+    </div>
+    {% for watcher in watchers %}
+        <div class="row small {% if watcher.citizen == me %} me{% endif %}">
+            <div class="cell padded rw-3 center">{{watcher.citizen.name}}</div>
+            <div class="cell padded rw-2 center">{{watcher.def}} <img src="{{ asset('build/images/icons/small_zombie.gif') }}" /></div>
+            <div class="cell padded rw-6">
+                {% if watcher.citizen == me %}
                     <span>
                         10 <img alt="" src="{{ asset('build/images/icons/small_zombie.gif') }}" /><div class="tooltip">{{'Basisverteidigung'|trans({}, 'game')}}</div>
                     </span>
@@ -74,14 +74,16 @@
                         </span>
                     {% endfor %}
                     {% if watcher.citizen == me %}<button x-ajax-href="{{path('town_bank')}}">{{'Wähle meine Waffen!'|trans({}, 'game')}}</button>{% endif %}
-                    {% endif %}
-                </div>
+                {% endif %}
             </div>
-        {% endfor %}
-        <div class="row small total" style="border-bottom: 1px solid #f0d79e;">
-            <div class="cell padded rw-8" style="border-bottom: 1px solid transparent;">{{'Gesamtzahl der Zombies, die heute Nacht sterben könnten:'|trans({}, 'game')}}</div>
-            <div class="cell padded rw-4" style="border-bottom: 1px solid transparent;">{{total_def}}</div>
         </div>
+    {% endfor %}
+    <div class="row small total" style="border-bottom: 1px solid #f0d79e;">
+        <div class="cell padded rw-8" style="border-bottom: 1px solid transparent;">{{'Gesamtzahl der Zombies, die heute Nacht sterben könnten:'|trans({}, 'game')}}</div>
+        <div class="cell padded rw-4" style="border-bottom: 1px solid transparent;">{{'Höchstens {nw_defense}'|trans({nw_defense: total_def},'game') }}</div>
+    </div>
+    {% endif %}
+
     </div>
 {% endblock %}
 {% block js %}
