--- a/assets/less/theme.less
+++ b/assets/less/theme.less
@@ -560,6 +560,10 @@ div.note {
     .box( #820000 ); color: white; position: relative; padding: 5px 5px 5px 26px;
     &:before { content: " "; position: absolute; display: block; top: 5px; left: 5px; width: 16px; height: 16px; background: url('../img/icons/small_warning.gif') no-repeat; }
   }
+  &.note-important {
+    .box(#6f3f3c);
+    color: #efdba8
+  }
   &.note-critical {
     .box( #5c2b20 );
     color: #f86;
