--- a/templates/ajax/game/actions.html.twig
+++ b/templates/ajax/game/actions.html.twig
@@ -35,6 +35,9 @@
     {% endmacro %}
 
     {% if (item_action_list is defined and item_action_list|length > 0) or (recipe_list is defined and recipe_list.recipes|length > 0)  %}
+        {% if iec is defined and iec  %}
+            <button x-item-action-toggle="1" class="mb-1"><img src="{{ asset('build/images/icons/small_bag.gif') }}" alt="">{{ 'Gegenstand verwenden'|trans({},'items')  }}</button>
+        {% endif %}
         <ul class="actions">
             {% if (item_action_list is defined) %}
                 {% for entry in item_action_list %}
@@ -117,6 +120,9 @@
                         {% endif %}
                     </li>
                 {% endfor %}
+            {% endif %}
+            {% if iec is defined and iec  %}
+                <li><div class="button" x-item-action-toggle="0">{{ 'Schließen'|trans({},'global') }}</div></li>
             {% endif %}
         </ul>
     {% endif %}
