--- a/templates/ajax/soul/refer.html.twig
+++ b/templates/ajax/soul/refer.html.twig
@@ -94,18 +94,18 @@
                                     <div class="note">
                                         <div class="center"><img alt="ref1" src="{{ asset('build/ext/ref/r1' ~ lang ~ '.gif') }}"></div>
                                         <h5>{{ 'HTML Code'|trans({},'soul') }}</h5>
-                                        <code>&lt;a href="{{ url('app_web_refer_incoming', {name: refer.name}) }}"&gt;&lt;img style="border:0;" src="{{ absolute_url(asset('build/ext/ref/r1' ~ lang ~ '.gif')) }}" alt=""/&gt;&lt;/a&gt;</code>
+                                        <code class="text-wrap-all">&lt;a href="{{ url('app_web_refer_incoming', {name: refer.name}) }}"&gt;&lt;img style="border:0;" src="{{ absolute_url(asset('build/ext/ref/r1' ~ lang ~ '.gif')) }}" alt=""/&gt;&lt;/a&gt;</code>
                                         <h5>{{ 'BBCode'|trans({},'soul') }}</h5>
-                                        <code>[url={{ url('app_web_refer_incoming', {name: refer.name}) }}][img]{{ absolute_url(asset('build/ext/ref/r1' ~ lang ~ '.gif')) }}[/img][/url] </code>
+                                        <code class="text-wrap-all">[url={{ url('app_web_refer_incoming', {name: refer.name}) }}][img]{{ absolute_url(asset('build/ext/ref/r1' ~ lang ~ '.gif')) }}[/img][/url] </code>
                                     </div>
                                 </div>
                                 <div class="cell ro-2 rw-8 ro-lg-1 rw-lg-10 ro-md-0 rw-md-12">
                                     <div class="note">
                                         <div class="center"><img alt="ref1" src="{{ asset('build/ext/ref/r2.gif') }}"></div>
                                         <h5>{{ 'HTML Code'|trans({},'soul') }}</h5>
-                                        <code>&lt;a href="{{ url('app_web_refer_incoming', {name: refer.name}) }}"&gt;&lt;img style="border:0;" src="{{ absolute_url(asset('build/ext/ref/r2.gif')) }}" alt=""/&gt;&lt;/a&gt;</code>
+                                        <code class="text-wrap-all">&lt;a href="{{ url('app_web_refer_incoming', {name: refer.name}) }}"&gt;&lt;img style="border:0;" src="{{ absolute_url(asset('build/ext/ref/r2.gif')) }}" alt=""/&gt;&lt;/a&gt;</code>
                                         <h5>{{ 'BBCode'|trans({},'soul') }}</h5>
-                                        <code>[url={{ url('app_web_refer_incoming', {name: refer.name}) }}][img]{{ absolute_url(asset('build/ext/ref/r2.gif')) }}[/img][/url] </code>
+                                        <code class="text-wrap-all">[url={{ url('app_web_refer_incoming', {name: refer.name}) }}][img]{{ absolute_url(asset('build/ext/ref/r2.gif')) }}[/img][/url] </code>
                                     </div>
                                 </div>
                             </div>
