Add :hover for log entry

--- a/assets/less/modules/log.less
+++ b/assets/less/modules/log.less
@@ -91,6 +91,7 @@
         div.card     { background: url("../../img/forum/card.png")    left center no-repeat, #36241b }
       }
       &.log-entry-type-17 { &:before { background: url("../../img/log/well_add.gif") } }
+      &:hover { background-color: #7e4d2a; border-color: #ddab76; }
     }
   }
   &+.log-day-select {
