Improve gossips display (#1438)

--- a/assets/less/modules/town.less
+++ b/assets/less/modules/town.less
@@ -551,12 +551,20 @@ ul.list{
   }
 }
 
+.citizen-gossips {
+  font-size: 1.3rem;
+}
+
 .gossips {
   margin-top: 5px;
   list-style: url('../../img/icons/small_dot.gif');
   padding-left: 20px;
-  font-size: 1.3rem;
+  font-size: 1.2rem;
   background-color: #926739;
+
+  strong {
+    font-variant: small-caps;
+  }
 }
 
 .citizen-box {
